Proyecto3/k8s/parte1/03-service-rust.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-api-service
  namespace: mumnk8s
spec:
  selector:
    app: rust-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
