Proyecto3/k8s/parte1/05-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: mumnk8s
spec:
  parentRefs:
    - name: api-gateway
  rules:
    # Health check raíz — requerido por GCP Load Balancer
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rust-api-service
          port: 80
    # Ruta principal del proyecto — carnet 201504070
    - matches:
        - path:
            type: PathPrefix
            value: /grpc-201504070
      backendRefs:
        - name: rust-api-service
          port: 80
